--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -14,10 +14,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(240, 246, 239);
+  background-color: rgb(255, 234, 172);
   padding: 10px 20px;
-  opacity: 90%;
-  position: relative;
+  opacity: 98%;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+
 }
 
 header > div {
@@ -82,7 +86,6 @@ header > div {
 
 .popular-searches-container {
   @include display-col($gap: 15px);
-  align-items: flex-start;
 }
 .popular-searches-wrapper {
   display: flex;
@@ -93,6 +96,7 @@ header > div {
   border-radius: 10px;
   height: fit-content;
   animation: animateSearches 0.5s ease;
+  //   background-color: black;
 }
 .popular-searches-wrapper * {
   background-color: rgb(239, 239, 234);
